--- a/info.plist
+++ b/info.plist
@@ -8,11 +8,37 @@
 	<string>Tools</string>
 	<key>connections</key>
 	<dict>
-		<key>4A18A796-31F2-4D7E-9005-E0D266621428</key>
+		<key>01E599FD-C8AB-4651-A53B-D723A3BDD8DD</key>
 		<array>
 			<dict>
 				<key>destinationuid</key>
-				<string>E01B9827-028D-412D-B25E-9125A66322C6</string>
+				<string>088DD27C-AF41-48A3-8612-0293D1D08EC5</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
+		<key>13AFBA36-FF1B-4452-A8E5-9ADBA62120BC</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>7F387A60-EE38-4198-9138-20E32A76A445</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
+		<key>3A0A06D6-9000-4F5F-B629-91C555DDD931</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>01E599FD-C8AB-4651-A53B-D723A3BDD8DD</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
@@ -25,7 +51,7 @@
 		<array>
 			<dict>
 				<key>destinationuid</key>
-				<string>4A18A796-31F2-4D7E-9005-E0D266621428</string>
+				<string>A1843803-D713-4862-AF0D-176D166BA6EE</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
@@ -34,8 +60,47 @@
 				<false/>
 			</dict>
 		</array>
-		<key>E01B9827-028D-412D-B25E-9125A66322C6</key>
-		<array/>
+		<key>A1843803-D713-4862-AF0D-176D166BA6EE</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>D37F4B78-459B-43D2-ADBB-932E14C1A7C2</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
+		<key>CB10931D-7EE0-4B96-B8DA-C07D2271AA12</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>13AFBA36-FF1B-4452-A8E5-9ADBA62120BC</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
+		<key>D37F4B78-459B-43D2-ADBB-932E14C1A7C2</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>79959082-2555-4D29-B04C-1B3C2A241F79</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>sourceoutputuid</key>
+				<string>B1E797F2-436B-41D8-9AB3-67AEFE2F17CD</string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
 	</dict>
 	<key>createdby</key>
 	<string>Andrzej Skrodzki</string>
@@ -59,9 +124,9 @@
 				<key>argumenttrimmode</key>
 				<integer>0</integer>
 				<key>argumenttype</key>
-				<integer>1</integer>
+				<integer>2</integer>
 				<key>escaping</key>
-				<integer>1</integer>
+				<integer>102</integer>
 				<key>keyword</key>
 				<string>clockify</string>
 				<key>queuedelaycustom</key>
@@ -75,9 +140,7 @@
 				<key>runningsubtext</key>
 				<string>Saving settings</string>
 				<key>script</key>
-				<string>query="{query}"
-
-./node_modules/.bin/run-node dist/index.js workspace $query</string>
+				<string>./node_modules/.bin/run-node dist/index.js</string>
 				<key>scriptargtype</key>
 				<integer>0</integer>
 				<key>scriptfile</key>
@@ -89,7 +152,7 @@
 				<key>type</key>
 				<integer>0</integer>
 				<key>withspace</key>
-				<true/>
+				<false/>
 			</dict>
 			<key>type</key>
 			<string>alfred.workflow.input.scriptfilter</string>
@@ -101,18 +164,30 @@
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>argument</key>
-				<string>{query}</string>
-				<key>variables</key>
-				<dict>
-					<key>workspace</key>
-					<string>{query}</string>
-				</dict>
+				<key>conditions</key>
+				<array>
+					<dict>
+						<key>inputstring</key>
+						<string>{var:cmd}</string>
+						<key>matchcasesensitive</key>
+						<false/>
+						<key>matchmode</key>
+						<integer>0</integer>
+						<key>matchstring</key>
+						<string>token</string>
+						<key>outputlabel</key>
+						<string></string>
+						<key>uid</key>
+						<string>B1E797F2-436B-41D8-9AB3-67AEFE2F17CD</string>
+					</dict>
+				</array>
+				<key>elselabel</key>
+				<string>else</string>
 			</dict>
 			<key>type</key>
-			<string>alfred.workflow.utility.argument</string>
+			<string>alfred.workflow.utility.conditional</string>
 			<key>uid</key>
-			<string>4A18A796-31F2-4D7E-9005-E0D266621428</string>
+			<string>D37F4B78-459B-43D2-ADBB-932E14C1A7C2</string>
 			<key>version</key>
 			<integer>1</integer>
 		</dict>
@@ -120,42 +195,267 @@
 			<key>config</key>
 			<dict>
 				<key>argument</key>
-				<string>clockify {var:workspace}</string>
+				<string>{query}</string>
+				<key>variables</key>
+				<dict>
+					<key>cmd</key>
+					<string>{query}</string>
+				</dict>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.utility.argument</string>
+			<key>uid</key>
+			<string>A1843803-D713-4862-AF0D-176D166BA6EE</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>argument</key>
+				<string>clockify:token</string>
 				<key>leftcursor</key>
 				<false/>
 			</dict>
 			<key>type</key>
 			<string>alfred.workflow.utility.showalfred</string>
 			<key>uid</key>
-			<string>E01B9827-028D-412D-B25E-9125A66322C6</string>
+			<string>79959082-2555-4D29-B04C-1B3C2A241F79</string>
 			<key>version</key>
 			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>argumenttrimmode</key>
+				<integer>0</integer>
+				<key>argumenttype</key>
+				<integer>0</integer>
+				<key>fixedorder</key>
+				<false/>
+				<key>items</key>
+				<string>[{"title":"1"},{"title":"2"},{"title":"3"},{"title":"4"},{"title":"5"},{"title":"6"},{"title":"7"},{"title":"8"}]</string>
+				<key>keyword</key>
+				<string>asd</string>
+				<key>runningsubtext</key>
+				<string></string>
+				<key>subtext</key>
+				<string></string>
+				<key>title</key>
+				<string>How many hours...</string>
+				<key>withspace</key>
+				<true/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.input.listfilter</string>
+			<key>uid</key>
+			<string>7F387A60-EE38-4198-9138-20E32A76A445</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>argument</key>
+				<string>{query}</string>
+				<key>variables</key>
+				<dict>
+					<key>project</key>
+					<string>{query}</string>
+				</dict>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.utility.argument</string>
+			<key>uid</key>
+			<string>13AFBA36-FF1B-4452-A8E5-9ADBA62120BC</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>argument</key>
+				<string>{query}</string>
+				<key>variables</key>
+				<dict>
+					<key>token</key>
+					<string>{query}</string>
+				</dict>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.utility.argument</string>
+			<key>uid</key>
+			<string>01E599FD-C8AB-4651-A53B-D723A3BDD8DD</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>alfredfiltersresults</key>
+				<false/>
+				<key>alfredfiltersresultsmatchmode</key>
+				<integer>0</integer>
+				<key>argumenttreatemptyqueryasnil</key>
+				<false/>
+				<key>argumenttrimmode</key>
+				<integer>0</integer>
+				<key>argumenttype</key>
+				<integer>1</integer>
+				<key>escaping</key>
+				<integer>102</integer>
+				<key>keyword</key>
+				<string>asdasd</string>
+				<key>queuedelaycustom</key>
+				<integer>3</integer>
+				<key>queuedelayimmediatelyinitially</key>
+				<true/>
+				<key>queuedelaymode</key>
+				<integer>0</integer>
+				<key>queuemode</key>
+				<integer>2</integer>
+				<key>runningsubtext</key>
+				<string></string>
+				<key>script</key>
+				<string>./node_modules/.bin/run-node dist/index.js project $workspace</string>
+				<key>scriptargtype</key>
+				<integer>1</integer>
+				<key>scriptfile</key>
+				<string></string>
+				<key>subtext</key>
+				<string>asd</string>
+				<key>title</key>
+				<string>Choose project...</string>
+				<key>type</key>
+				<integer>0</integer>
+				<key>withspace</key>
+				<false/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.input.scriptfilter</string>
+			<key>uid</key>
+			<string>CB10931D-7EE0-4B96-B8DA-C07D2271AA12</string>
+			<key>version</key>
+			<integer>3</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>argumenttype</key>
+				<integer>0</integer>
+				<key>keyword</key>
+				<string>clockify:token</string>
+				<key>subtext</key>
+				<string>asd</string>
+				<key>text</key>
+				<string>asd</string>
+				<key>withspace</key>
+				<true/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.input.keyword</string>
+			<key>uid</key>
+			<string>3A0A06D6-9000-4F5F-B629-91C555DDD931</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>concurrently</key>
+				<false/>
+				<key>escaping</key>
+				<integer>102</integer>
+				<key>script</key>
+				<string>./node_modules/.bin/run-node dist/index.js token $token</string>
+				<key>scriptargtype</key>
+				<integer>1</integer>
+				<key>scriptfile</key>
+				<string></string>
+				<key>type</key>
+				<integer>0</integer>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.script</string>
+			<key>uid</key>
+			<string>088DD27C-AF41-48A3-8612-0293D1D08EC5</string>
+			<key>version</key>
+			<integer>2</integer>
 		</dict>
 	</array>
 	<key>readme</key>
 	<string></string>
 	<key>uidata</key>
 	<dict>
-		<key>4A18A796-31F2-4D7E-9005-E0D266621428</key>
+		<key>01E599FD-C8AB-4651-A53B-D723A3BDD8DD</key>
 		<dict>
 			<key>xpos</key>
-			<integer>230</integer>
+			<integer>235</integer>
+			<key>ypos</key>
+			<integer>170</integer>
+		</dict>
+		<key>088DD27C-AF41-48A3-8612-0293D1D08EC5</key>
+		<dict>
+			<key>xpos</key>
+			<integer>520</integer>
+			<key>ypos</key>
+			<integer>315</integer>
+		</dict>
+		<key>13AFBA36-FF1B-4452-A8E5-9ADBA62120BC</key>
+		<dict>
+			<key>xpos</key>
+			<integer>590</integer>
 			<key>ypos</key>
 			<integer>130</integer>
+		</dict>
+		<key>3A0A06D6-9000-4F5F-B629-91C555DDD931</key>
+		<dict>
+			<key>xpos</key>
+			<integer>55</integer>
+			<key>ypos</key>
+			<integer>245</integer>
+		</dict>
+		<key>79959082-2555-4D29-B04C-1B3C2A241F79</key>
+		<dict>
+			<key>xpos</key>
+			<integer>405</integer>
+			<key>ypos</key>
+			<integer>70</integer>
+		</dict>
+		<key>7F387A60-EE38-4198-9138-20E32A76A445</key>
+		<dict>
+			<key>xpos</key>
+			<integer>660</integer>
+			<key>ypos</key>
+			<integer>100</integer>
 		</dict>
 		<key>8D922DEE-DDEA-4A91-B509-C354AE614E15</key>
 		<dict>
 			<key>xpos</key>
-			<integer>60</integer>
+			<integer>50</integer>
 			<key>ypos</key>
-			<integer>100</integer>
+			<integer>30</integer>
 		</dict>
-		<key>E01B9827-028D-412D-B25E-9125A66322C6</key>
+		<key>A1843803-D713-4862-AF0D-176D166BA6EE</key>
 		<dict>
 			<key>xpos</key>
-			<integer>370</integer>
+			<integer>220</integer>
 			<key>ypos</key>
-			<integer>135</integer>
+			<integer>65</integer>
+		</dict>
+		<key>CB10931D-7EE0-4B96-B8DA-C07D2271AA12</key>
+		<dict>
+			<key>xpos</key>
+			<integer>395</integer>
+			<key>ypos</key>
+			<integer>195</integer>
+		</dict>
+		<key>D37F4B78-459B-43D2-ADBB-932E14C1A7C2</key>
+		<dict>
+			<key>xpos</key>
+			<integer>330</integer>
+			<key>ypos</key>
+			<integer>60</integer>
 		</dict>
 	</dict>
 	<key>webaddress</key>
