--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "alfy": "^0.9.0",
     "axios": "^0.19.0",
+    "clockify-npm": "^0.0.6",
     "fs": "^0.0.1-security",
     "lodash": "^4.17.15",
     "yargs": "^13.3.0"
